unpackaged/main/default/objects/Account/fields/A_R_Balance_1_30__c.field-meta.xml
<CustomField>
    <fullName>A_R_Balance_1_30__c</fullName>
    <label>A/R Balance 1-30:</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>