unpackaged/main/default/objects/Account/fields/A_R_Balance_90__c.field-meta.xml
<CustomField>
    <fullName>A_R_Balance_90__c</fullName>
    <label>A/R Balance 90+</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>