unpackaged/main/default/objects/Account/fields/A_R_Balance__c.field-meta.xml
<CustomField>
    <fullName>A_R_Balance__c</fullName>
    <formula>A_R_Balance_Current__c  +  A_R_Balance_1_30__c  +  A_R_Balance_31_60__c  +   A_R_Balance_61_90__c  +  A_R_Balance_90__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/R Balance:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>