unpackaged/main/default/objects/Account/fields/Account_Age_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Account_Age_in_Years__c</fullName>
    <formula>(Today()- Created_Date__c)/360</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Age in Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>