unpackaged/main/default/objects/Account/fields/Account_Asset_Location_Tag__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset_Location_Tag__c</fullName>
    <formula>Name+" - "+ ShippingStreet +" - "+ ShippingCity+" - "+ ShippingState+" - "+ ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Asset Location Tag</label>
    <type>Text</type>
</CustomField>