unpackaged/main/default/objects/Account/fields/Account_ID_Alpha_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Alpha_Group__c</fullName>
    <formula>Name  + "_____"  +  Account_Alias__c  + "_____" +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID Alpha Group</label>
    <type>Text</type>
</CustomField>