unpackaged/main/default/objects/Account/fields/Account_Source_acq__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_acq__c</fullName>
    <inlineHelpText>This field determines the source company that originated the account. This field cannot be edited except by a System Admin</inlineHelpText>
    <label>Account Source ACQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPro</fullName>
                <default>true</default>
                <label>IPro</label>
            </value>
            <value>
                <fullName>EON</fullName>
            </value>
            <value>
                <fullName>Comm3</fullName>
            </value>
            <value>
                <fullName>DTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>