unpackaged/main/default/objects/Account/fields/AcctSeed__Billing_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Days_Due__c</fullName>
    <inlineHelpText>Used to calculate billing due date. Billing date minus Billing days offset equals due date.</inlineHelpText>
    <label>Billing Days Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>