unpackaged/main/default/objects/Account/fields/AcctSeed__Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Email__c</fullName>
    <inlineHelpText>This field has been deprecated.</inlineHelpText>
    <label>zDep-Billing Email</label>
    <type>Email</type>
</CustomField>