unpackaged/main/default/objects/Account/fields/AcctSeed__Discount_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Days_Due__c</fullName>
    <inlineHelpText>Used in the calculation of payment discounts in the accounts payable process. A discount will be automatically taken in the cash disbursements process if payment is made within the discount days due of the issue date.</inlineHelpText>
    <label>Payable Discount Days Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>