unpackaged/main/default/objects/Account/fields/AcctSeed__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Percent__c</fullName>
    <inlineHelpText>The discount percentage of an account payable that a vendor provides as part of prompt payment terms.</inlineHelpText>
    <label>Payable Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>