unpackaged/main/default/objects/Account/fields/AcctSeed__Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Entity_Use_Code__c</fullName>
    <description>To exempt an Account from Avalara tax calculation, this field's value should match the Entity Use code entered for this Account's exemption in Avalara. Use in conjunction with the Exemption Number field.</description>
    <inlineHelpText>To exempt an Account from Avalara tax calculation, this field's value should match the Entity Use code entered for this Account's exemption in Avalara. Use in conjunction with the Exemption Number field.</inlineHelpText>
    <label>Entity Use Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>