unpackaged/main/default/objects/Account/fields/AcctSeed__Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Exemption_Number__c</fullName>
    <description>To exempt an Account from Avalara tax calculation, this field's value should match the Exemption Number entered for this Account's exemption in Avalara. Use in conjunction with the Entity Use Code field.</description>
    <inlineHelpText>To exempt an Account from Avalara tax calculation, this field's value should match the Exemption Number entered for this Account's exemption in Avalara. Use in conjunction with the Entity Use Code field.</inlineHelpText>
    <label>Exemption Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>