unpackaged/main/default/objects/Account/fields/AcctSeed__File_Import_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__File_Import_Match_Name__c</fullName>
    <inlineHelpText>Used to match the vendor account to a specific file import related transaction. This field is only used when importing financial files such as a bank statement via the Import Financial File tab.</inlineHelpText>
    <label>File Import Match Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>