unpackaged/main/default/objects/Account/fields/agent_Address_2__c.field-meta.xml
<CustomField>
    <fullName>agent_Address_2__c</fullName>
    <description>Rev.io Agent Address 2 field</description>
    <label>Address_2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>