unpackaged/main/default/objects/Account/fields/Agent_id2__c.field-meta.xml
<CustomField>
    <fullName>Agent_id2__c</fullName>
    <description>Rev.io Agent_id2</description>
    <label>Agent_id2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>