unpackaged/main/default/objects/Account/fields/Agent_id__c.field-meta.xml
<CustomField>
    <fullName>Agent_id__c</fullName>
    <label>Agent_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>