unpackaged/main/default/objects/Account/fields/Agent_Id_Parent__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id_Parent__c</fullName>
    <description>Rev.io Agent ID Parent</description>
    <label>Agent_Id_Parent</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>