unpackaged/main/default/objects/Account/fields/AP_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>AP_Net_Amount__c</fullName>
    <label>AP Paid 6 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>