unpackaged/main/default/objects/Account/fields/ARID__c.field-meta.xml
<CustomField>
    <fullName>ARID__c</fullName>
    <label>MCD ARID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>