unpackaged/main/default/objects/Account/fields/AS_RB_Total__c.field-meta.xml
<CustomField>
    <fullName>AS_RB_Total__c</fullName>
    <label>AS RB Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>