unpackaged/main/default/objects/Account/fields/Attn__c.field-meta.xml
<CustomField>
    <fullName>Attn__c</fullName>
    <description>Rev.io Attn</description>
    <label>Attn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>