unpackaged/main/default/objects/Account/fields/Bill_Cycle_Day_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle_Day_Comm3__c</fullName>
    <label>Bill Cycle Day (Comm3)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>