unpackaged/main/default/objects/Account/fields/Bill_Profile__c.field-meta.xml
<CustomField>
    <fullName>Bill_Profile__c</fullName>
    <description>Rev.io Bill Profile</description>
    <label>Bill_Profile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>