unpackaged/main/default/objects/Account/fields/Billing_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_1__c</fullName>
    <formula>BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing_Address_1</label>
    <type>Text</type>
</CustomField>