unpackaged/main/default/objects/Account/fields/Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_2__c</fullName>
    <description>Rev.io Billing Address 2.</description>
    <label>Billing_Address_2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>