unpackaged/main/default/objects/Account/fields/Billing_Address_Unparsed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Unparsed__c</fullName>
    <description>Rev.io Billing_Address_Unparsed</description>
    <label>Billing_Address_Unparsed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>