unpackaged/main/default/objects/Account/fields/Billing_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Method__c</fullName>
    <description>Billing Delivery Method</description>
    <inlineHelpText>Enter the method in which to send Invoices to this Client.</inlineHelpText>
    <label>Billing Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
                <default>true</default>
                <label>Paper</label>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>