unpackaged/main/default/objects/Account/fields/Billing_Last_Statement_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Last_Statement_Created_Date__c</fullName>
    <label>Billing Last Statement Created Date</label>
    <type>DateTime</type>
</CustomField>