unpackaged/main/default/objects/Account/fields/Billing_Last_Twelve_Months__c.field-meta.xml
<CustomField>
    <fullName>Billing_Last_Twelve_Months__c</fullName>
    <description>Billing Last Twelve Months</description>
    <inlineHelpText>Billing Last Twelve Months</inlineHelpText>
    <label>Billing Last Twelve Months</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>