unpackaged/main/default/objects/Account/fields/Billing_Master__c.field-meta.xml
<CustomField>
    <fullName>Billing_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Master</label>
    <referenceTo>Billing_Master__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>