unpackaged/main/default/objects/Account/fields/Billing_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Master_Name__c</fullName>
    <formula>Billing_Master__r.Master_Billing_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Master Name</label>
    <type>Text</type>
</CustomField>