unpackaged/main/default/objects/Account/fields/Carrier_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Billing_Status__c</fullName>
    <label>Carrier Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>