unpackaged/main/default/objects/Account/fields/Christmas_Gift__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Gift__c</fullName>
    <label>Christmas Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peppermint Box (Small)</fullName>
            </value>
            <value>
                <fullName>Praline Box (Small)</fullName>
            </value>
            <value>
                <fullName>Praline Box (Medium)</fullName>
            </value>
            <value>
                <fullName>Executive Package (Large)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>