unpackaged/main/default/objects/Account/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <defaultValue>"Business"</defaultValue>
    <description>Rev.io Class field</description>
    <label>Class</label>
    <length>25</length>
    <type>Text</type>
</CustomField>