unpackaged/main/default/objects/Account/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <formula>""</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close_date</label>
    <type>Text</type>
</CustomField>