unpackaged/main/default/objects/Account/fields/Closed_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity_Products__c</fullName>
    <label>RB Closed Opportunity Products</label>
    <summarizedField>Opportunity.AnyWare_Monthly_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Sale_Type__c</field>
        <operation>equals</operation>
        <value>AnyWare, TSP, AnyWare Support Only</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Recurring_Billing_Active__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>