unpackaged/main/default/objects/Account/fields/Comm3_TP_Account_MetaPhone__c.field-meta.xml
<CustomField>
    <fullName>Comm3_TP_Account_MetaPhone__c</fullName>
    <label>Comm3 TP Account MetaPhone</label>
    <length>24</length>
    <type>Text</type>
</CustomField>