unpackaged/main/default/objects/Account/fields/Comm3_TP_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Comm3_TP_Account_Status__c</fullName>
    <label>Comm3 TP Account Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>