unpackaged/main/default/objects/Account/fields/Comm3_TP_Acct_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Comm3_TP_Acct_Nbr__c</fullName>
    <label>Comm3 TP Acct Nbr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>