unpackaged/main/default/objects/Account/fields/Controller_Mode__c.field-meta.xml
<CustomField>
    <fullName>Controller_Mode__c</fullName>
    <label>Controller Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>