unpackaged/main/default/objects/Account/fields/Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Type__c</fullName>
    <label>Controller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3300</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>